# mango

./: .editorconfig  DEV.md  LICENSE  README.md  deps.ts  docker-compose.yml  example.ts  mod.ts
.github/workflows/: bumper.yml  ci.yml  master.yml  release.yml
bench/: deno_bench.ts  index.mjs
bson/: .gitignore  Cargo.toml  Makefile  mod.ts  types.ts
bson/bench/: deno_bench.ts  index.mjs  mango_bson.ts  package.json
bson/scripts/: generate.ts
bson/src/: extended.rs  lib.rs  number.rs  object.rs  value.rs
bson/src/encoder/: extended.rs  mod.rs  number.rs  object.rs  value.rs
bson/wasm/: mango_bson.js
driver/: client.ts  collection.ts  cursor.ts  database.ts  error.ts  types.ts  util.ts
protocol/: error.ts  header.ts  mod.ts  op_msg.ts  op_query.ts  op_reply.ts
tmp/: app.ts  docker-compose.yml  mongo.seeder.dockerfile  mongodb.env
tmp/mongo-data-dump/: profiles.bson  profiles.metadata.json
