[package]
name = "mango_bson"
version = "0.1.0"
authors = ["Filippo Rossi"]
edition = "2018"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
js-sys = "0.3"
bson = "1.1"
hex = "0.4"
base64 = "0.13"
